gccida/c0/get_attr_memory
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15103:1: error: must use 'enum' tag to refer to type 'attr_memory'
attr_memory  get_attr_memory( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15106:1: error: must use 'enum' tag to refer to type 'attr_memory'
attr_memory v3; // [rsp+1Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15116:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 15861, "get_attr_memory"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15116:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 15861, "get_attr_memory"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15145:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return memory_operand( recog_data_0.operand[0], VOIDmode) || memory_operand( recog_data_0.operand[1], VOIDmode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15145:78: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return memory_operand( recog_data_0.operand[0], VOIDmode) || memory_operand( recog_data_0.operand[1], VOIDmode); 
                                                                             ^~~~~~~~~~~~
                                                                             recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15270:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15281:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15319:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15321:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15333:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& symbolic_operand( recog_data_0.operand[1], SImode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15337:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) && memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15337:76: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) && memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                                                                           ^~~~~~~~~~~~
                                                                           recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15339:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15341:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return memory_operand( recog_data_0.operand[1], VOIDmode) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15348:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| flag_pic && symbolic_operand( recog_data_0.operand[1], SImode)) 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15356:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& memory_operand( recog_data_0.operand[2], VOIDmode); 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15384:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) && memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/insn-attrtab.c:15384:76: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) && memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                                                                           ^~~~~~~~~~~~
                                                                           recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_memory/src/obj/insn-attrtab.o] Error 1
